--- a/pages/ui-field.html
+++ b/pages/ui-field.html
@@ -24,15 +24,15 @@
       <div class="preview">
         <ui-field>
           <ui-checkbox></ui-checkbox>
-          <ui-label required>Label</ui-label>
+          <label>Label</label>
         </ui-field>
       </div>
       <div class="code">
         <code>
           <div>&lt;ui-field&gt;</div>
             <div>&nbsp;&nbsp;&lt;ui-checkbox&gt;&lt;/ui-checkbox&gt;</div>
-            <div>&nbsp;&nbsp;&lt;ui-label required&gt;Label&lt;/ui-label&gt;</div>
-          <div>&lt;/ui-label&gt;</div>
+            <div>&nbsp;&nbsp;&lt;label required&gt;Label&lt;/label&gt;</div>
+          <div>&lt;/label&gt;</div>
         </code>
       </div>
     </div>
@@ -44,12 +44,12 @@
       <div class="preview">
         <ui-field>
           <ui-switch></ui-switch>
-          <ui-label required>Label</ui-label>
+          <label required>Label</label>
         </ui-field>
       </div>
       <div class="code">
         <code>
-          <div>&lt;ui-label required&gt;Label&lt;/ui-label&gt;</div>
+          <div>&lt;label required&gt;Label&lt;/label&gt;</div>
         </code>
       </div>
     </div>
@@ -60,13 +60,13 @@
     <div class="example">
       <div class="preview">
         <ui-field>
-          <ui-label required>Label</ui-label>
+          <label required>Label</label>
           <ui-textarea></ui-textarea>
         </ui-field>
       </div>
       <div class="code">
         <code>
-          <div>&lt;ui-label required&gt;Label&lt;/ui-label&gt;</div>
+          <div>&lt;label required&gt;Label&lt;/label&gt;</div>
         </code>
       </div>
     </div>
