--- a/pages/ui-label.html
+++ b/pages/ui-label.html
@@ -1,48 +1,36 @@
 <section class="intro">
   <h1>Label</h1>
-  <div class="description">Defines a title for a form element.</div>
+  <div class="description">A label provides accessible, descriptive text for a user interface control.</div>
   <ui-divider></ui-divider>
   <div class="info">
     <h2>Features</h2>
     <ul>
-      <li>Supports LTR and RTL.</li>
+      <li>Supports LTR and RTL. Default: LTR.</li>
     </ul>
   </div>
   <div class="info">
     <h2>Attributes</h2>
     <ul>
-      <li>required - static, optional.
-        <br>Adds an asterisk.</li>
+      <li>text-align - static, optional. Default: start (based on text direction).
+        <br>Controls text alignment: start, center, end, and justify.</li>
     </ul>
   </div>
 </section>
 
 <section class="content">
+
   <div class="content-item">
     <div>Label</div>
     <div class="example">
       <div class="preview">
-        <ui-label text="Label"></ui-label>
+        <ui-label>Label</ui-label>
       </div>
       <div class="code">
         <code>
-          <div>&lt;ui-label&gt;Label&lt;/ui-label&gt;</div>
+          <div>&lt;label&gt;Label&lt;/label&gt;</div>
         </code>
       </div>
     </div>
   </div>
 
-  <div class="content-item">
-    <div>Required</div>
-    <div class="example">
-      <div class="preview">
-        <ui-label text="Label" required></ui-label>
-      </div>
-      <div class="code">
-        <code>
-          <div>&lt;ui-label required&gt;Label&lt;/ui-label&gt;</div>
-        </code>
-      </div>
-    </div>
-  </div>
 </section>
