--- a/pages/ui-checkbox.html
+++ b/pages/ui-checkbox.html
@@ -21,7 +21,7 @@
       <li>checked - reactive, optional.
         <br>Controls the checked state of the component.</li>
       <li>required - static, optional.
-        <br>Defines whether the component is required.</li>
+        <br>Indicates whether the component is required.</li>
       <li>disabled - reactive, optional.
         <br>Controls the disabled state of the component.</li>
       <li>shape - static, optional. Default: rounded.
