--- a/pages/ui-input.html
+++ b/pages/ui-input.html
@@ -23,7 +23,7 @@
       <li>clearable - static, optional.
         <br>Adds a clear button.</li>
       <li>required - static, optional.
-        <br>Defines whether the input is required or not.</li>
+        <br>Indicates whether the component is required.</li>
       <li>disabled - reactive, optional.
         <br>Controls the disabled state of the component.</li>
       <li>shape - static, optional. Default: rounded.
