--- a/pages/ui-switch.html
+++ b/pages/ui-switch.html
@@ -20,6 +20,8 @@
         <br>Component height is measured in pixels. Recommended range: 16 to 32. Even values are preferred.</li>
       <li>checked - reactive, required. Default: false.
         <br>Controls the checked state of the component.</li>
+      <li>required - static, optional.
+        <br>Indicates whether the component is required.</li>
       <li>disabled - reactive, optional.
         <br>Controls the disabled state of the component.</li>
     </ul>
