--- a/pages/ui-icon.html
+++ b/pages/ui-icon.html
@@ -11,7 +11,8 @@
   <div class="info">
     <h2>Attributes</h2>
     <ul>
-      <li>icon - reactive, required.</li>
+      <li>icon - reactive, required.
+        <br>Specifies the name of the icon to display.</li>
     </ul>
   </div>
 </section>
