--- a/pages/ui-checkbox.html
+++ b/pages/ui-checkbox.html
@@ -5,7 +5,7 @@
   <div class="info">
     <h2>Features</h2>
     <ul>
-      <li>Supports LTR and RTL.</li>
+      <li>Supports LTR and RTL. Default: LTR</li>
       <li>The following ARIA attributes are added automatically: aria-disabled and aria-checked.</li>
       <li>A visible outline appears when the component is focused.</li>
       <li>Supports keyboard navigation: Tab to move, Enter/Space to trigger action.</li>
@@ -16,7 +16,7 @@
     <ul>
       <li>aria-label - static, required.
         <br>The aria-label must be set manually.</li>
-      <li>height - static, optional. Default: 20.
+      <li>height - static, optional. Default: 24.
         <br>The component's height is measured in pixels. Recommended range: 16 to 24. Even values are preferred.</li>
       <li>checked - reactive, optional.
         <br>Controls the checked state of the component.</li>
@@ -33,24 +33,6 @@
 <section class="content">
 
   <div class="content-item">
-    <div>Shape (default: rounded)</div>
-    <div class="example">
-      <div class="preview">
-        <ui-checkbox shape="rounded" label="shape=&quot;rounded&quot;"></ui-checkbox>
-        <ui-checkbox shape="circle" label="shape=&quot;circle&quot;"></ui-checkbox>
-        <ui-checkbox shape="square" label="shape=&quot;square&quot;"></ui-checkbox>
-      </div>
-      <div class="code">
-        <code>
-          <div>&lt;ui-checkbox shape="rounded" label="rounded"&gt;&lt;/ui-checkbox&gt;</div>
-          <div>&lt;ui-checkbox shape="circle" label="circle"&gt;&lt;/ui-checkbox&gt;</div>
-          <div>&lt;ui-checkbox shape="square" label="square"&gt;&lt;/ui-checkbox&gt;</div>
-        </code>
-      </div>
-    </div>
-  </div>
-
-  <div class="content-item">
     <div>Height 16</div>
     <div class="example">
       <div class="preview">
@@ -65,7 +47,7 @@
   </div>
 
   <div class="content-item">
-    <div>Default height: 20</div>
+    <div>Height: 24 (default)</div>
     <div class="example">
       <div class="preview">
         <ui-checkbox aria-label="Settings"></ui-checkbox>
@@ -73,6 +55,24 @@
       <div class="code">
         <code>
           <div>&lt;ui-checkbox aria-label="Settings"&gt;&lt;/ui-checkbox&gt;</div>
+        </code>
+      </div>
+    </div>
+  </div>
+
+  <div class="content-item">
+    <div>Shape (default: rounded)</div>
+    <div class="example">
+      <div class="preview">
+        <ui-checkbox shape="rounded" label="shape=&quot;rounded&quot;"></ui-checkbox>
+        <ui-checkbox shape="circle" label="shape=&quot;circle&quot;"></ui-checkbox>
+        <ui-checkbox shape="square" label="shape=&quot;square&quot;"></ui-checkbox>
+      </div>
+      <div class="code">
+        <code>
+          <div>&lt;ui-checkbox shape="rounded" label="rounded"&gt;&lt;/ui-checkbox&gt;</div>
+          <div>&lt;ui-checkbox shape="circle" label="circle"&gt;&lt;/ui-checkbox&gt;</div>
+          <div>&lt;ui-checkbox shape="square" label="square"&gt;&lt;/ui-checkbox&gt;</div>
         </code>
       </div>
     </div>
