--- a/pages/ui-focus.html
+++ b/pages/ui-focus.html
@@ -3,7 +3,7 @@
   <div class="description">A utility element that captures focus without affecting layout.</div>
   <ui-divider></ui-divider>
   <div class="info">
-    <h2>Usage Tips</h2>
+    <h2>Usage</h2>
     <ul>
       <li>Place right after <code>&lt;body&gt;</code> to prevent unexpected focus jumps.</li>
     </ul>
