--- a/pages/ui-textarea.html
+++ b/pages/ui-textarea.html
@@ -5,8 +5,9 @@
   <div class="info">
     <h2>Features</h2>
     <ul>
-      <li>Supports LTR and RTL.</li>
+      <li>Supports LTR and RTL. Default: LTR</li>
       <li>A visible outline appears when the component is focused.</li>
+      <li>The minimum supported version of Firefox is 136. (<code>contenteditable="plaintext-only"</code>)</li>
     </ul>
   </div>
   <div class="info">
