--- a/pages/ui-switch.html
+++ b/pages/ui-switch.html
@@ -3,10 +3,18 @@
   <div class="description">Switches provide a simple and user-friendly way to toggle between two states.</div>
   <ui-divider></ui-divider>
   <div class="info">
+    <h2>Usage</h2>
+    <ul>
+      <li>Requires a ui-label and a form control.</li>
+      <li>Supported form controls: ui-checkbox, ui-switch, ui-select, ui-input, ui-textarea.</li>
+    </ul>
+  </div>
+  <div class="info">
     <h2>Features</h2>
     <ul>
       <li>Supports LTR and RTL.</li>
       <li>The following ARIA attributes are added automatically: aria-disabled and aria-checked.</li>
+      <li>Required ui-label and one form control like ui-checkbox.</li>
       <li>A visible outline appears on focused buttons.</li>
       <li>Supports keyboard navigation: Tab to move, Enter/Space to trigger action.</li>
     </ul>
@@ -15,7 +23,7 @@
     <h2>Attributes</h2>
     <ul>
       <li>aria-label - static, required.
-        <br>The aria-label must be set manually.</li>
+        <br>If used outside of the <a href="#ui-field">field</a> component, the aria-label must be set manually.</li>
       <li>height - static, optional. Default: 24.
         <br>Component height is measured in pixels. Recommended range: 16 to 32. Even values are preferred.</li>
       <li>checked - reactive, required. Default: false.
