--- a/pages/ui-button.html
+++ b/pages/ui-button.html
@@ -5,7 +5,7 @@
   <div class="info">
     <h2>Features</h2>
     <ul>
-      <li>Supports LTR and RTL.</li>
+      <li>Supports LTR and RTL. Default: LTR.</li>
       <li>The following ARIA attributes are added automatically: aria-disabled, aria-busy.</li>
       <li>At least one of these attributes is required to create a button: label, icon-leading, or icon-trailing.</li>
       <li>For a button with a single icon, use either icon-leading or icon-trailing.</li>
