--- a/pages/ui-switch.html
+++ b/pages/ui-switch.html
@@ -12,7 +12,7 @@
   <div class="info">
     <h2>Features</h2>
     <ul>
-      <li>Supports LTR and RTL.</li>
+      <li>Supports LTR and RTL. Default: LTR.</li>
       <li>The following ARIA attributes are added automatically: aria-disabled and aria-checked.</li>
       <li>Required ui-label and one form control like ui-checkbox.</li>
       <li>A visible outline appears on focused buttons.</li>
