--- a/pages/ui-checkbox.html
+++ b/pages/ui-checkbox.html
@@ -5,7 +5,7 @@
   <div class="info">
     <h2>Features</h2>
     <ul>
-      <li>Supports LTR and RTL. Default: LTR</li>
+      <li>Supports LTR and RTL. Default: LTR.</li>
       <li>The following ARIA attributes are added automatically: aria-disabled and aria-checked.</li>
       <li>A visible outline appears when the component is focused.</li>
       <li>Supports keyboard navigation: Tab to move, Enter/Space to trigger action.</li>
