--- a/pages/ui-input.html
+++ b/pages/ui-input.html
@@ -5,7 +5,7 @@
   <div class="info">
     <h2>Features</h2>
     <ul>
-      <li>Supports LTR and RTL.</li>
+      <li>Supports LTR and RTL. Default: LTR.</li>
       <li>Font size is "button height / 2", capped between 12px and 16px.</li>
       <li>A visible outline appears when the component is focused.</li>
     </ul>
