--- a/pages/ui-checkbox.html
+++ b/pages/ui-checkbox.html
@@ -5,7 +5,6 @@
   <div class="info">
     <h2>Features</h2>
     <ul>
-      <li>Supports LTR and RTL. Default: LTR.</li>
       <li>The following ARIA attributes are added automatically: aria-disabled and aria-checked.</li>
       <li>A visible outline appears when the component is focused.</li>
       <li>Supports keyboard navigation: Tab to move, Enter/Space to trigger action.</li>
@@ -15,7 +14,7 @@
     <h2>Attributes</h2>
     <ul>
       <li>aria-label - static, required.
-        <br>The aria-label must be set manually.</li>
+        <br>If used outside of the <a href="#ui-field">field</a> component, the aria-label must be set manually.</li>
       <li>height - static, optional. Default: 24.
         <br>The component's height is measured in pixels. Recommended range: 16 to 24. Even values are preferred.</li>
       <li>checked - reactive, optional.
