--- a/pages/ui-core.html
+++ b/pages/ui-core.html
@@ -1,5 +1,5 @@
 <section class="intro">
-  <h1>Core Features</h1>
+  <h1>Core</h1>
   <div class="description">Key fundamental capabilities of the UI library.</div>
   <ui-divider></ui-divider>
   <div class="info">
@@ -7,6 +7,12 @@
     <ul>
       <li>Supports both LTR (Left-to-Right) and RTL (Right-to-Left) text directions.</li>
       <li>Default text direction is LTR.</li>
+    </ul>
+  </div>
+  <div class="info">
+    <h2>Attributes</h2>
+    <ul>
+      <li>ARIA attributes used are valid for their roles and accurately reflect the component's state.</li>
     </ul>
   </div>
 </section>
