--- a/pages/ui-button.html
+++ b/pages/ui-button.html
@@ -3,11 +3,15 @@
   <div class="description">Buttons are used to perform actions or submit forms.</div>
   <ui-divider></ui-divider>
   <div class="info">
-    <h2>Features</h2>
+    <h2>Usage</h2>
     <ul>
-      <li>The following ARIA attributes are added automatically: aria-disabled, aria-busy.</li>
       <li>At least one of these attributes is required to create a button: label, icon-leading, or icon-trailing.</li>
       <li>For a button with a single icon, use either icon-leading or icon-trailing.</li>
+    </ul>
+  </div>
+  <div class="info">
+    <h2>Features</h2>
+    <ul>
       <li>Font size is "button height / 2 - 2px", capped between 12px and 16px.</li>
       <li>Corner rounding is calculated as "button height / 4".</li>
       <li>A visible outline appears when the component is focused.</li>
