--- a/pages/ui-core.html
+++ b/pages/ui-core.html
@@ -6,7 +6,7 @@
     <h2>Features</h2>
     <ul>
       <li>Supports both LTR (Left-to-Right) and RTL (Right-to-Left) text directions.</li>
-      <li>Default text direction is LTR.</li>
+      <li>Text direction follows the parent or system context unless explicitly set.</li>
     </ul>
   </div>
   <div class="info">
