--- a/pages/ui-input.html
+++ b/pages/ui-input.html
@@ -137,11 +137,11 @@
     <div>Error</div>
     <div class="example">
       <div class="preview">
-        <ui-input error></ui-input>
+        <ui-input status="error"></ui-input>
       </div>
       <div class="code">
         <code>
-          &lt;ui-input error&gt;&lt;/ui-input&gt;
+          &lt;ui-input status="error"&gt;&lt;/ui-input&gt;
         </code>
       </div>
     </div>
@@ -151,11 +151,11 @@
     <div>Success</div>
     <div class="example">
       <div class="preview">
-        <ui-input valid></ui-input>
+        <ui-input status="success"></ui-input>
       </div>
       <div class="code">
         <code>
-          &lt;ui-input valid&gt;&lt;/ui-input&gt;
+          &lt;ui-input status="success"&gt;&lt;/ui-input&gt;
         </code>
       </div>
     </div>
@@ -165,11 +165,11 @@
     <div>Warning</div>
     <div class="example">
       <div class="preview">
-        <ui-input warning></ui-input>
+        <ui-input status="warning"></ui-input>
       </div>
       <div class="code">
         <code>
-          &lt;ui-input warning&gt;&lt;/ui-input&gt;
+          &lt;ui-input status="warning"&gt;&lt;/ui-input&gt;
         </code>
       </div>
     </div>
