--- a/pages/ui-textarea.html
+++ b/pages/ui-textarea.html
@@ -90,11 +90,11 @@
     <div>Success</div>
     <div class="example">
       <div class="preview">
-        <ui-textarea status="valid"></ui-textarea>
+        <ui-textarea status="success"></ui-textarea>
       </div>
       <div class="code">
         <code>
-          &lt;ui-textarea status="valid"&gt;&lt;/ui-textarea&gt;
+          &lt;ui-textarea status="success"&gt;&lt;/ui-textarea&gt;
         </code>
       </div>
     </div>
