--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="app">
 
   <nav>
-    <div class="static"></div>
+    <div class="static"><span class="version">ui v.0.1.0a<span></div>
     <div class="dynamic">
       <div class="nav-category" data-nav-category="essentials">
         <div class="menuTitle">Essentials</div>
