--- a/pages/ui-divider.html
+++ b/pages/ui-divider.html
@@ -12,12 +12,12 @@
   <div class="info">
     <h2>Attributes</h2>
     <ul>
-      <li><code>text</code> - static, optional.
+      <li>text - static, optional.
         <br>Continuous string. (nowrap)</li>
-      <li><code>text-align</code> - static, optional. Default: center.
-        <br>Text alignment: <code>start</code>, <code>end</code>.</li>
-      <li><code>orientation</code> - static, optional. Default: <code>horizontal</code>.
-        <br>Defines the divider direction. <code>horizontal</code> | <code>vertical</code></li>
+      <li>text-align - static, optional. Default: center.
+        <br>Text alignment: start, end.</li>
+      <li>orientation - static, optional. Default: horizontal.
+        <br>Defines the divider direction. horizontal | vertical</li>
     </ul>
   </div>
 </section>
