--- a/pages/ui-field.html
+++ b/pages/ui-field.html
@@ -17,12 +17,12 @@
   <div class="info">
     <h2>Attributes</h2>
     <ul>
-      <li><code>label-position</code> - static, optional. Default: <code>start</code>
-        <br>Defines the position of the <code>ui-label</code> relative to the form control. By default, the label is placed before the form control, so <code>start</code> doesn't need to be explicitly set. Use <code>end</code> to place the label after the control.</li>
-      <li><code>orientation</code> - static, optional. Default: <code>horizontal</code>
-        <br>Defines the layout direction of the label and the form control. (horizontal | vertical)</li>
-      <li><code>required</code> - static, optional.
-        <br>Adds the <code>required</code> attribute to all child elements.</li>
+      <li>label-position - static, optional. Default: start
+        <br>Defines the position of the ui-label relative to the form control. By default, the label is placed before the form control, so start doesn't need to be explicitly set. Use end to place the label after the control.</li>
+      <li>orientation - static, optional. Default: horizontal
+        <br>Defines the layout direction of the label and the form control. horizontal | vertical</li>
+      <li>required - static, optional.
+        <br>Adds the required attribute to all child elements.</li>
     </ul>
   </div>
 </section>
