--- a/pages/ui-text.html
+++ b/pages/ui-text.html
@@ -11,7 +11,7 @@
   <div class="info">
     <h2>Attributes</h2>
     <ul>
-      <li>text-align - static, optional. Default: start (based on text direction).
+      <li>text-align - static, optional. Default: start.
         <br>Controls text alignment: start, center, end, and justify.</li>
     </ul>
   </div>
