--- a/pages/ui-textarea.html
+++ b/pages/ui-textarea.html
@@ -12,11 +12,12 @@
   <div class="info">
     <h2>Attributes</h2>
     <ul>
-      <li>placeholder - static, optional.</li>
+      <li>placeholder - static, optional.
+        <br>Specifies a short hint that describes the expected value of the input. It appears inside the form control when it is empty.</li>
       <li>height - static, optional. Default: 40.
         <br>Component height is measured in pixels. Recommended range: 24 to 40. Even values are preferred.</li>
       <li>clearable - static, optional.
-        <br>Adds a clear button.</li>
+        <br>Adds a clear button, which, when clicked, removes all content from the form control.</li>
       <li>required - static, optional.
         <br>Defines whether the component is required.</li>
       <li>disabled - reactive, optional.
