--- a/index.html
+++ b/index.html
@@ -12,38 +12,54 @@
 <ui-focus></ui-focus>
 <div id="app">
 
-  <nav>
-    <div class="static"><span class="version">ui v.0.1.0a<span></div>
-    <div class="dynamic">
-      <div class="nav-category" data-nav-category="essentials">
-        <div class="menuTitle">Essentials</div>
+  <div role="navigation">
+    <nav>
+      <div class="static"><span class="version">ui v.0.1.0a<span></div>
+      <div class="dynamic">
+        <div class="nav-category" data-nav-category="essentials">
+          <div class="menuTitle">Essentials</div>
+        </div>
+  <!-- variant, tone, elevation, radius -->
+        <div class="nav-category" data-nav-category="theme">
+          <div class="menuTitle">Theme</div>
+        </div>
+  <!-- stack, grid, container, section, split -->
+        <div class="nav-category" data-nav-category="layout">
+          <div class="menuTitle">Layout</div>
+        </div>
+  <!-- divider, icon, line, spacer, text -->
+        <div class="nav-category" data-nav-category="primitives">
+          <div class="menuTitle">Primitives</div>
+        </div>
+  <!-- button, input, select, modal, tooltip -->
+        <div class="nav-category" data-nav-category="forms">
+          <div class="menuTitle">Forms</div>
+        </div>
+  <!-- portal, observer, resize-handler, mount-detector -->
+        <div class="nav-category" data-nav-category="utilities">
+          <div class="menuTitle">Utilities</div>
+        </div>
+  <!-- -->
       </div>
-<!-- variant, tone, elevation, radius -->
-      <div class="nav-category" data-nav-category="theme">
-        <div class="menuTitle">Theme</div>
-      </div>
-<!-- stack, grid, container, section, split -->
-      <div class="nav-category" data-nav-category="layout">
-        <div class="menuTitle">Layout</div>
-      </div>
-<!-- divider, icon, line, spacer, text -->
-      <div class="nav-category" data-nav-category="primitives">
-        <div class="menuTitle">Primitives</div>
-      </div>
-<!-- button, input, select, modal, tooltip -->
-      <div class="nav-category" data-nav-category="forms">
-        <div class="menuTitle">Forms</div>
-      </div>
-<!-- portal, observer, resize-handler, mount-detector -->
-      <div class="nav-category" data-nav-category="utilities">
-        <div class="menuTitle">Utilities</div>
-      </div>
-<!-- -->
-    </div>
-    <div class="static"></div>
-  </nav>
+      <div class="static"></div>
+    </nav>
+  </div>
 
   <article id="article"></article>
+
+<!--
+  <div role="navigation">
+    <nav>
+      <div class="static"></div>
+      <div class="dynamic">
+        <div class="nav-category" data-nav-category="">
+          <div class="menuTitle">Submenu</div>
+        </div>
+      </div>
+      <div class="static"></div>
+    </nav>
+  </div>
+-->
 </div>
 
 
