--- a/pages/ui-textarea.html
+++ b/pages/ui-textarea.html
@@ -6,7 +6,7 @@
     <h2>Features</h2>
     <ul>
       <li>A visible outline appears when the component is focused.</li>
-      <li>The minimum supported version of Firefox is 136. (<code>contenteditable="plaintext-only"</code>)</li>
+      <li>The minimum supported version of Firefox is 136. contenteditable="plaintext-only"</li>
     </ul>
   </div>
   <div class="info">
