--- a/pages/ui-core.html
+++ b/pages/ui-core.html
@@ -3,10 +3,17 @@
   <div class="description">Key fundamental capabilities of the UI library.</div>
   <ui-divider></ui-divider>
   <div class="info">
+    <h2>Information</h2>
+    <ul>
+      <li>The library does not use Shadow DOM.</li>
+      <li>The library does not use internal CSS class names.</li>
+      <li>Text direction follows the parent or system context unless explicitly set.</li>
+    </ul>
+  </div>
+  <div class="info">
     <h2>Features</h2>
     <ul>
       <li>Supports both LTR (Left-to-Right) and RTL (Right-to-Left) text directions.</li>
-      <li>Text direction follows the parent or system context unless explicitly set.</li>
     </ul>
   </div>
   <div class="info">
