--- a/pages/ui-focus.html
+++ b/pages/ui-focus.html
@@ -5,7 +5,7 @@
   <div class="info">
     <h2>Usage</h2>
     <ul>
-      <li>Place right after <code>&lt;body&gt;</code> to prevent unexpected focus jumps.</li>
+      <li>Place right after &lt;body&gt; to prevent unexpected focus jumps.</li>
     </ul>
   </div>
   <div class="info">
