--- a/pages/ui-select.html
+++ b/pages/ui-select.html
@@ -21,8 +21,8 @@
   <div class="content-item">
     <div>Default</div>
     <div class="example">
-      <div class="preview">
-
+      <div class="preview" style="height:220px;">
+        <ui-select></ui-select>
       </div>
       <div class="code">
         <code>
@@ -32,6 +32,6 @@
     </div>
   </div>
 <div class="content-item">
-        <ui-select></ui-select>
+                
   </div>
 </section>
